ready to reBegin

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+
+<body>
+    <h2>本网站即将重启</h2>
+    <h3>因为</h3>
+    <h1>我tm要奋发向上</h1>
+</body>
+
+</html>
